--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/material": "^5.15.14",
     "@mui/x-data-grid": "^7.1.0",
     "axios": "^1.6.8",
+    "moment": "^2.30.1",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
