--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "@mui/x-data-grid": "^7.1.0",
     "axios": "^1.6.8",
     "moment": "^2.30.1",
+    "mongoose": "^8.3.1",
     "next": "14.1.4",
+    "next-auth": "^5.0.0-beta.16",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
-    "sass": "^1.72.0"
+    "sass": "^1.72.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "eslint": "^8",
