--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
-MONGO_URI = mongodb://127.0.0.1:27017/viymeat
+MONGO_URI = mongodb://127.0.0.1:27017/postOffice
 AUTH_SECRET = lkvlooRIU49JHGIe2d6nfHsdjn4
-AUTH_URL = http://localhost:3000/api/auth 
 
 SERVER_ONE = http://localhost:3001/api
 
