--- a/package.json
+++ b/package.json
@@ -11,15 +11,18 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@hookform/resolvers": "^3.3.4",
     "@mui/material": "^5.15.14",
     "@mui/x-data-grid": "^7.1.0",
     "axios": "^1.6.8",
+    "bcrypt": "^5.1.1",
     "moment": "^2.30.1",
     "mongoose": "^8.3.1",
     "next": "14.1.4",
     "next-auth": "^5.0.0-beta.16",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "sass": "^1.72.0",
