--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@hookform/resolvers": "^3.3.4",
     "@mui/material": "^5.15.14",
     "@mui/x-data-grid": "^7.1.0",
+    "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "moment": "^2.30.1",
@@ -25,6 +26,7 @@
     "react-hook-form": "^7.51.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
+    "react-redux": "^9.1.0",
     "sass": "^1.72.0",
     "zod": "^3.22.4"
   },
