--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
+    "jspdf": "^2.5.1",
     "moment": "^2.30.1",
     "mongoose": "^8.3.1",
     "next": "14.1.4",
@@ -27,6 +28,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
+    "react-spinners": "^0.13.8",
     "sass": "^1.72.0",
     "zod": "^3.22.4"
   },
