--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
+    "json2csv": "^6.0.0-alpha.2",
     "jspdf": "^2.5.1",
     "moment": "^2.30.1",
     "mongoose": "^8.3.1",
