--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-redux": "^9.1.0",
     "react-spinners": "^0.13.8",
     "sass": "^1.72.0",
+    "xlsx": "^0.18.5",
     "zod": "^3.22.4"
   },
   "devDependencies": {
